syntax = "proto3";
import "protofile/account_service.proto";

package protofile;

option go_package = "./protofile";

service OrganizationService {
  rpc CreateOrganization (CreateOrganizationRequest) returns (CreateOrganizationResponse);
  rpc GetOrganization (GetOrganizationRequest) returns (GetOrganizationResponse);
  rpc UpdateOrganization (UpdateOrganizationRequest) returns (UpdateOrganizationResponse);
}

message Organization {
  string name = 2;
  string description = 3;
  repeated Account accounts = 4;
  string user_admin_id = 5;
  int64 created_at = 6;
}

message CreateOrganizationRequest {
  string name = 1;
  string description = 2;
}

message CreateOrganizationResponse {
  bool ok = 1;
}

message GetOrganizationRequest {
  string id = 1;
}

message GetOrganizationResponse {
  string id = 1;
  string name = 2;
  string description = 3;
}

message UpdateOrganizationRequest {
  string id = 1;
  string name = 2;
  string description = 3;
}

message UpdateOrganizationResponse {
  bool ok = 1;
}
