/*
 * This file is part of the Hostasphere backend.
 * (c) 2024 Hostasphere <hostasphere.com>
 */

package organization

import (
	"context"
	"log"

	pb "openHostaLogs/protofile/organization"
)

type Server struct {
	pb.UnimplementedOrganizationServiceServer
}

// CreateOrganization handles the creation of a new organization.
func (s *Server) CreateOrganization(ctx context.Context, req *pb.CreateOrganizationRequest) (*pb.CreateOrganizationResponse, error) {
	// Implement the logic to create an organization
	log.Printf("Received CreateOrganization request: %v", req)
	return &pb.CreateOrganizationResponse{Ok: true}, nil
}

// GetOrganization handles fetching an organization by ID.
func (s *Server) GetOrganization(ctx context.Context, req *pb.GetOrganizationRequest) (*pb.GetOrganizationResponse, error) {
	// Implement the logic to get an organization
	log.Printf("Received GetOrganization request: %v", req)
	return &pb.GetOrganizationResponse{
		Id:          req.Id,
		Name:        "Example Name",
		Description: "Example Description",
	}, nil
}

// UpdateOrganization handles updating an existing organization.
func (s *Server) UpdateOrganization(ctx context.Context, req *pb.UpdateOrganizationRequest) (*pb.UpdateOrganizationResponse, error) {
	// Implement the logic to update an organization
	log.Printf("Received UpdateOrganization request: %v", req)
	return &pb.UpdateOrganizationResponse{Ok: true}, nil
}
